fixed spacing i think

--- a/frontend/src/app/modules/level2/level2.component.scss
+++ b/frontend/src/app/modules/level2/level2.component.scss
@@ -4,11 +4,11 @@ div {
 
 table { 
     width: 320px;
-    height: 420px;
+    //height: 420px;
 }
 
 table, th, td {
-    border: 0px solid black;
+    border: 1px solid black;
 }
 
 .button_rank {
